# nonprofit-backend

./: .gitignore  README.md  index.html  main.py  pyproject.toml  requirements.txt  start.sh  vercel.json
ai_assistant/: assistant.py  constants.py  security.py
ai_assistant/models/: chat_request.py  stream_response.py
form990/: insert_embed_grants.py  insert_embed_nonprofits.py  process.py
form990/archive/: closest_matches.py  masked_summary.py  matching.old.py  matching.py  requirements.py  simple_summary.ipynb  smile_grants.csv  split_with_header.sh  starter.py
search/: mission_similarity.py
